Updated css, html

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -18,10 +18,13 @@ li {
 .results-flex {
   display: flex;
   flex-direction: column;
+  font-family: 'Varela Round', sans-serif;
+  font-size: 30px;
 }
 
+
+
 .results-flex li {
-  font-size: 40px;
   margin-top: 10px;
 }
 
@@ -39,7 +42,6 @@ label {
 
 .middle-section .left-side {
   width: 400px;
-  /* border: 1px solid; */
   height: 600px;
   text-align: center;
   background-color: rgb(255, 255, 255);
@@ -78,9 +80,8 @@ label {
 }
 
 .right-side {
-  width: 400px;
-  /* border: 1px solid; */
-  height: 600px;
+  width: 300px;
+  height: 300px;
   text-align: center;
   background-color: rgb(255, 255, 255);
   border-radius: 10px;
@@ -88,7 +89,6 @@ label {
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
     rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
     rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
-  /* box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset; */
 }
 
 .fav-movies {
@@ -97,7 +97,6 @@ label {
 }
 
 .page-footer {
-  /* padding-bottom: 150px; */
   background-color: skyblue;
   margin-top: 20px;
 }
@@ -120,10 +119,45 @@ button {
   margin: 10px;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 1100px) {
   main,
   nav {
     display: flex;
     flex-direction: column;
   }
+
+  .nav-wrapper .brand-logo {
+    font-size: 15px;
+  }
+
+  .middle-section {
+    margin: 20px;
+
+  }
+
+  .right-side {
+    margin-top: 20px;
+  }
+}
+
+@media screen and (max-width: 975px) {
+  .middle-section {
+    flex-direction: column;
+
+  }
+
+  .box {
+    margin: 0 auto;
+    width: 375px;
+  }
+
+  .movie-history {
+    text-align: center;
+  }
+
+  .btn-movie {
+    margin-bottom: 30px;
+  }
+
+
 }
