Cleaned up code, added some finishing touches to JS and CSS

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -22,6 +22,10 @@ li {
   font-size: 30px;
 }
 
+.error-msg {
+  color: red;
+}
+
 
 
 .results-flex li {
@@ -41,8 +45,8 @@ label {
 }
 
 .middle-section .left-side {
-  width: 400px;
-  height: 600px;
+  width: 300px;
+  height: 500px;
   text-align: center;
   background-color: rgb(255, 255, 255);
   border-radius: 10px;
@@ -65,23 +69,34 @@ label {
 .btn-movie:hover {
   transform: scale(1.05);
   cursor: pointer;
+  align-items: center;
 }
 
 .history {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
 }
 
 .middle-section {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
-  margin-top: 40px;
+  margin-top: 100px;
+}
+
+.middle {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
 }
 
 .right-side {
   width: 300px;
-  height: 300px;
+  height: 400px;
   text-align: center;
   background-color: rgb(255, 255, 255);
   border-radius: 10px;
@@ -111,6 +126,10 @@ button {
   font-family: cursive;
 }
 
+.results-flex .activity {
+  font-size: 24px;
+}
+
 .center-welcome {
   text-align: center;
 }
@@ -120,11 +139,7 @@ button {
 }
 
 @media screen and (max-width: 1100px) {
-  main,
-  nav {
-    display: flex;
-    flex-direction: column;
-  }
+  
 
   .nav-wrapper .brand-logo {
     font-size: 15px;
